--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -67,7 +67,7 @@
       <input type="submit" value="Submit" />
     </fieldset>
   </form>
-  <p><span id="last-update">Updated 2022-09-19: OPSIN's JSON API now returns JSON when an uninterpretable name is provided. Other APIs now return text return rather than HTML in this scenario<br/>If you have found OPSIN useful in your work citing our <a href="https://pubs.acs.org/doi/full/10.1021/ci100384d">paper</a> would be very much appreciated. Depiction courtesy of the <a href="https://lifescience.opensource.epam.com/indigo/">Indigo Toolkit</a></p>
+  <p><span id="last-update">Updated 2022-09-19: OPSIN's JSON API now returns JSON when an uninterpretable name is provided. Other APIs now return text return rather than HTML in this scenario</span><br/>If you have found OPSIN useful in your work citing our <a href="https://pubs.acs.org/doi/full/10.1021/ci100384d">paper</a> would be very much appreciated. Depiction courtesy of the <a href="https://lifescience.opensource.epam.com/indigo/">Indigo Toolkit</a></p>
   <div id="opsininstructions">
     <p>Enter a chemical name into the box and then click submit.<br />
        The chemical structure described by the name, or why it could not be interpreted, will appear here.</p>
