Switched to HTML5 Doctype, minor tidying/corrections

--- a/src/main/webapp/information.html
+++ b/src/main/webapp/information.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
 <!-- remove next line if your web server adds charset-->
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -9,7 +9,7 @@
 <!-- change title and metadata for each page here -->
 <link rel="stylesheet" href="opsin.css" type="text/css" media="all" />
 <title>About OPSIN</title>
-<style type="text/css" media="all">
+<style media="all">
 table#supported-nomenclature {
   border-width: 0px;
   border-spacing: 2px;
@@ -45,7 +45,7 @@ table#supported-nomenclature td {
   <h1>OPSIN Information</h1>
 </div>
 
-<div id="container"> <a name="skip-content" id="skip-content"></a>
+<div id="container"> <a id="skip-content"></a>
 <div id="content">
 
 <div id="content-primary">
@@ -199,7 +199,7 @@ thioketones, thiols and thiosemicarbazones
     <td>Amino Acids and derivatives</td>
     <td>
       <a href="opsin/glycinol.png">glycinol</a><br/>
-      <a href="opsin/L-2-aminobutyric acid.png">L-2-aminobutyric acid</a><br/>
+      <a href="opsin/L-2-aminobutyric%20acid.png">L-2-aminobutyric acid</a><br/>
       <a href="opsin/L-alanyl-L-glutaminyl-L-arginyl-O-phosphono-L-seryl-L-alanyl-L-proline.png">L-alanyl-L-glutaminyl-L-arginyl-O-phosphono-L-seryl-L-alanyl-L-proline</a>
     </td>
   </tr>
