--- a/src/main/webapp/instructions.html
+++ b/src/main/webapp/instructions.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
 <!-- remove next line if your web server adds charset-->
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -20,7 +20,7 @@
   <h1>Instructions for Web Service</h1>
 </div>
 
-<div id="container"> <a name="skip-content" id="skip-content"></a>
+<div id="container"> <a id="skip-content"></a>
 <div id="content">
 
 <div id="content-primary">
