--- a/src/main/webapp/information.html
+++ b/src/main/webapp/information.html
@@ -5,7 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" href="global/style/layout.css" type="text/css" media="all" />
 <link rel="stylesheet" href="global/style/print.css" type="text/css" media="print" />
-<link rel="Shortcut Icon" href="https://www.ch.cam.ac.uk/newsites/all/themes/ucam/favicon.ico" />
+<link rel="Shortcut Icon" href="https://www-cmi.ch.cam.ac.uk/sites/all/themes/chemistry_theme/favicon.ico" />
 <!-- change title and metadata for each page here -->
 <link rel="stylesheet" href="opsin.css" type="text/css" media="all" />
 <title>About OPSIN</title>
