--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -67,7 +67,7 @@
       <input type="submit" value="Submit" />
     </fieldset>
   </form>
-  <p><span id="last-update">Updated 2022-09-19: OPSIN's JSON API now returns JSON when an uninterpretable name is provided. Other APIs now return text return rather than HTML in this scenario</span><br/>If you have found OPSIN useful in your work citing our <a href="https://pubs.acs.org/doi/full/10.1021/ci100384d">paper</a> would be very much appreciated. Depiction courtesy of the <a href="https://lifescience.opensource.epam.com/indigo/">Indigo Toolkit</a></p>
+  <p><span id="last-update">Updated 2022-11-02: Added copy buttons</span><br/>If you have found OPSIN useful in your work citing our <a href="https://pubs.acs.org/doi/full/10.1021/ci100384d">paper</a> would be very much appreciated. Depiction courtesy of the <a href="https://lifescience.opensource.epam.com/indigo/">Indigo Toolkit</a></p>
   <div id="opsininstructions">
     <p>Enter a chemical name into the box and then click submit.<br />
        The chemical structure described by the name, or why it could not be interpreted, will appear here.</p>
@@ -81,11 +81,17 @@
     <h3 id="messagetype"></h3>
     <p id="message"></p>
     <h3 title="StdInChI aims to provide a canonical form for a chemical structure that is independent of the input tautomer/resonance form">StdInChI:</h3>
-    <p id="stdinchi"></p>
+    <p>
+      <span id="stdinchi"></span><button class="copyBtn" onclick="copyText(this, 'stdinchi')">Copy</button>
+    </p>
     <h3 title="Hashed form of StdInChI. Multiple structures can have the same key (although this in practice occurs extremely rarely)">StdInChIKey:</h3>
-    <p id="stdinchikey"></p>
+    <p>
+      <span id="stdinchikey"></span> (Click to search the internet for this structure)<button class="copyBtn" onclick="copyText(this, 'stdinchikey')">Copy</button>
+    </p>
     <h3 title="Simplified Molecular Input Line Entry Specification (a machine-readable structure description)">SMILES:</h3>
-    <p id="smiles"></p>
+    <p>
+      <span id="smiles"></span><button class="copyBtn" onclick="copyText(this, 'smiles')">Copy</button>
+    </p>
     <h3 title="Chemical Markup Language">CML:</h3>
     <pre id="cml"></pre>
   </div>
