Redirect API requests with no parameters to instructions page

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -76,7 +76,7 @@
       <input type="submit" value="Submit" />
     </fieldset>
   </form>
-  <p><span id="last-update">Updated 2023-12-03: Workaround for issue with names containing forward slashes</span><br/>If you have found OPSIN useful in your work citing our <a href="https://pubs.acs.org/doi/full/10.1021/ci100384d">paper</a> would be very much appreciated. Depiction courtesy of the <a href="https://lifescience.opensource.epam.com/indigo/">Indigo Toolkit</a></p>
+  <p><span id="last-update">Updated 2024-01-28: Redirect API requests with no parameters to instructions page</span><br/>If you have found OPSIN useful in your work citing our <a href="https://pubs.acs.org/doi/full/10.1021/ci100384d">paper</a> would be very much appreciated. Depiction courtesy of the <a href="https://lifescience.opensource.epam.com/indigo/">Indigo Toolkit</a></p>
   <div id="opsininstructions">
     <p>Enter a chemical name into the box and then click submit.<br />
        The chemical structure described by the name, or why it could not be interpreted, will appear here.</p>
@@ -132,7 +132,7 @@
 <!-- end of #content -->
 
 <ul id="site-info">
-  <li class="copy">&copy; 2009-2023 Daniel Lowe, Centre for Molecular Informatics</li>
+  <li class="copy">&copy; 2009-2024 Daniel Lowe, Centre for Molecular Informatics</li>
   <li class="link last"><a href="https://www.cam.ac.uk/about-this-site/privacy-policy">Privacy</a></li>
   <li class="link"><a href="https://www.cam.ac.uk/about-this-site/accessibility">Accessibility</a></li>
 </ul>
