--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -91,21 +91,13 @@
     <p id="message"></p>
     <div class="structureOutput">
       <h3 title="StdInChI aims to provide a canonical form for a chemical structure that is independent of the input tautomer/resonance form">StdInChI:</h3>
-      <p>
-        <span id="stdinchi"></span><button class="copyBtn" onclick="copyText(this, 'stdinchi')">Copy</button>
-      </p>
+      <p><span id="stdinchi"></span><button class="copyBtn" onclick="copyText(this, 'stdinchi')">Copy</button></p>
       <h3 title="Hashed form of StdInChI. Multiple structures can have the same key (although this in practice occurs extremely rarely)">StdInChIKey:</h3>
-      <p>
-        <span id="stdinchikey"></span> (Click to search the internet for this structure)<button class="copyBtn" onclick="copyText(this, 'stdinchikey')">Copy</button>
-      </p>
+      <p><span id="stdinchikey"></span> (Click to search the internet for this structure)<button class="copyBtn" onclick="copyText(this, 'stdinchikey')">Copy</button></p>
       <h3 title="Simplified Molecular Input Line Entry Specification (a machine-readable structure description)">SMILES:</h3>
-      <p>
-        <span id="smiles"></span><button class="copyBtn" onclick="copyText(this, 'smiles')">Copy</button>
-      </p>
+      <p><span id="smiles"></span><button class="copyBtn" onclick="copyText(this, 'smiles')">Copy</button></p>
       <h3 title="Chemical Markup Language">CML:</h3>
-      <p>
-        <pre id="cml"></pre><button class="copyBtn" onclick="copyText(this, 'cml')">Copy</button>
-      </p>
+      <p><pre id="cml"></pre><button class="copyBtn" onclick="copyText(this, 'cml')">Copy</button></p>
     </div>
   </div>
 </div>
